--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Tuto GIT</title>
 </head>
 <body style="background-color: #f1bc2a;">
-    <h1 style="text-align: center; padding-top: 200px; color: #ffffff;">J'apprends GIT</h1>
+    <h1 style="text-align: center; padding-top: 200px; color: #ffffff;">J'apprends GIT !</h1>
 </body>
 </html>
